--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -9,6 +9,8 @@ dist/
 .vscode/
 .idea/
 .DS_Store
+config/config.php 
+config/dotenv.php
 
 # =======================
 # 2. Bỏ qua các file môi trường & config nhạy cảm
