--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
     "version": 2,
     "builds": [
       {
-        "src": "backend/*.php",
-        "use": "@vercel/php"
+        "src": "backend/**/*.php",
+        "use": "@vercel/static-build"
       }
     ],
     "routes": [
