update for vercel

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
       {
         "src": "backend/**/*.php",
-        "use": "@vercel/static-build"
+        "use": "@vercel/php"
       }
     ],
     "routes": [
