--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:8.1-apache
 
 # Copy mã nguồn vào thư mục web của Apache
-COPY backend/ /var/www/html/
+COPY . /var/www/html/
 
 # Mở cổng mặc định
 EXPOSE 80
