--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,5 +7,8 @@ RUN apt-get update && apt-get install -y libpng-dev libjpeg-dev libfreetype6-dev
 # Copy mã nguồn vào thư mục web của Apache
 COPY . /var/www/html/
 
-# Mở cổng mặc định
-EXPOSE 80
+# Cung cấp cổng mà Railway cung cấp thông qua biến môi trường
+ENV PORT 80
+
+# Mở cổng ứng dụng (cổng mặc định cho Railway)
+EXPOSE $PORT
