--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.17.0",
+    "react-transition-group": "^4.4.5",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
