--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "global": "^4.4.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
