--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "apexcharts": "^4.7.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.5",
     "draft-js": "^0.11.7",
@@ -20,12 +21,15 @@
     "global": "^4.4.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.7.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-grid-layout": "^1.5.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.17.0",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.15.3",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
